Post image calls are only made when an image is present

--- a/frontendFix/src/app/components/post/post.component.html
+++ b/frontendFix/src/app/components/post/post.component.html
@@ -19,7 +19,7 @@
   <div class="card-body">
     <p class="card-text">{{ post.text }}</p>
   </div>
-  <div class="d-flex justify-content-center pb-3" *ngIf="hasImage">
+  <div class="d-flex justify-content-center pb-3" *ngIf="post.hasImage">
     <img
       src="/api/posts/{{ post.id }}/image"
       class="img-fluid"
