--- a/frontendFix/src/app/components/post-modal/post-modal.component.html
+++ b/frontendFix/src/app/components/post-modal/post-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h5 class="modal-title" id="uploadModalLabel">Upload Post</h5>
+  <h5 class="modal-title" id="uploadModalLabel">{{ isEditMode ? 'Edit Post' : 'Upload Post' }}</h5>
   <button
     type="button"
     class="close"
