--- a/frontendFix/src/app/components/users/users.component.html
+++ b/frontendFix/src/app/components/users/users.component.html
@@ -27,7 +27,7 @@
           <img [src]="'/api/users/' + user.id + '/image'" alt="User Image" class="rounded-circle me-2 user-image">
           <span class="user-name">{{ user.username }}</span>
         </div>
-        <a [routerLink]="['/edit-profile', user.id]" class="btn">
+        <a [routerLink]="['/user/edit-profile/' + user?.username]" class="btn">
           <i class="fas fa-edit"></i>
         </a>
       </li>
