--- a/frontendFix/src/app/components/reported-posts/reported-posts.component.html
+++ b/frontendFix/src/app/components/reported-posts/reported-posts.component.html
@@ -1,1 +1,23 @@
-<p>reported-posts works!</p>
+<div class="container mt-5 flex-grow-1 mb-3">
+  <h2 class="text-center">Reported Posts</h2>
+
+  <!-- List of Posts -->
+  <div class="list-group" id="post-container" *ngFor="let post of posts">
+    <app-post-reported [post]="post"></app-post-reported>
+  </div>
+  <div id="spinner" class="text-center">
+    <div class="spinner-border" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+  <div class="text-center mt-3">
+    <button
+      class="btn btn-primary px-5"
+      id="loadMoreButton"
+      (click)="getMorePosts()"
+      style="display: none"
+    >
+      Load More
+    </button>
+  </div>
+</div>
