--- a/frontendFix/src/app/components/post-reported/post-reported.component.html
+++ b/frontendFix/src/app/components/post-reported/post-reported.component.html
@@ -1,37 +1,34 @@
 <div class="list-group-item d-flex align-items-center justify-content-between">
   <div class="d-flex align-items-center">
     <img
-      src="/image/user/${post.owner.username}"
+      [src]="'/api/users/' + post.ownerUsername + '/image'"
       class="rounded-circle"
       style="width: 50px; height: 50px"
       alt="User Photo"
     />
     <div class="ml-3 text-truncate">
-      <strong>{{post.text}}</strong>
+      <strong>{{ post.text }}</strong>
     </div>
   </div>
   <div>
-    <div>
-      <span class="badge badge-primary badge-pill ml-2"
-        >{{post.reports}} Reports</span
-      >
-      <a
-        class="btn btn-link text-primary p-0 mr-2"
-        title="View Thread"
-        style="text-decoration: none"
-        [routerLink]="'/t/' + post.threadName"
-      >
-        <i class="fas fa-eye"></i>
-      </a>
-      <button
-        class="btn btn-link text-primary p-0 mr-2"
-        title="Validate"
-        style="text-decoration: none"
-        onclick="validatePost(this);"
-        data-id="${post.id}"
-      >
-        <i class="fas fa-check"></i>
-      </button>
-    </div>
+    <span class="badge badge-primary badge-pill mr-2"
+      >{{ post.reports }} Reports</span
+    >
+    <button
+      class="btn btn-link text-primary p-0 mr-2"
+      title="View Thread"
+      style="text-decoration: none"
+      [routerLink]="['/t', post.threadId]"
+    >
+      <i class="fas fa-eye"></i>
+    </button>
+    <button
+      class="btn btn-link text-primary p-0 mr-2"
+      title="Validate"
+      style="text-decoration: none"
+      (click)="validatePost()"
+    >
+      <i class="fas fa-check"></i>
+    </button>
   </div>
 </div>
