Post validation and user images working

--- a/frontendFix/src/app/components/post-reported/post-reported.component.html
+++ b/frontendFix/src/app/components/post-reported/post-reported.component.html
@@ -1,7 +1,7 @@
-<div class="list-group-item d-flex align-items-center justify-content-between">
+<div class="list-group-item d-flex align-items-center justify-content-between" *ngIf="!validationSuccessful">
   <div class="d-flex align-items-center">
     <img
-      [src]="'/api/users/' + post.ownerUsername + '/image'"
+      [src]="'/api/users/' + post.ownerId + '/image'"
       class="rounded-circle"
       style="width: 50px; height: 50px"
       alt="User Photo"
