--- a/frontendFix/src/app/components/reported-posts/reported-posts.component.html
+++ b/frontendFix/src/app/components/reported-posts/reported-posts.component.html
@@ -10,7 +10,7 @@
       <span class="sr-only">Loading...</span>
     </div>
   </div>
-  <div class="text-center mt-3">
+  <div class="text-center mt-3" *ngIf="!lastPage">
     <button
       class="btn btn-primary px-5"
       id="loadMoreButton"
