--- a/frontendFix/src/app/components/reported-posts/reported-posts.component.html
+++ b/frontendFix/src/app/components/reported-posts/reported-posts.component.html
@@ -3,12 +3,15 @@
 
   <!-- List of Posts -->
   <div class="list-group" id="post-container" *ngFor="let post of posts">
-    <app-post-reported [post]="post"></app-post-reported>
+    <app-post-reported [post]="post" (postValidated)="removePostFromList($event)"></app-post-reported>
   </div>
   <div id="spinner" class="text-center" *ngIf="loading">
     <div class="spinner-border" role="status">
-      <span class="sr-only">Loading...</span>
+      <span class="sr-only"></span>
     </div>
+  </div>
+  <div *ngIf="!loading && posts.length === 0" class="text-center mt-3">
+    <h4>No reported posts</h4>
   </div>
   <div class="text-center mt-3" *ngIf="!lastPage">
     <button
