--- a/frontendFix/src/app/components/thread/thread.component.html
+++ b/frontendFix/src/app/components/thread/thread.component.html
@@ -30,9 +30,26 @@
         </div>
       </div>
       <div class="list-group">
-        <div *ngFor="let post of thread?.posts" class="col-12 mb-3">
+        <div *ngFor="let post of postsShown" class="col-12 mb-3">
           <app-post [post]="post" [threadId]="threadId" (edited)="editPost()" (deleted)="deletePost()"></app-post>
         </div>
+      </div>
+      <div id="spinner" class="text-center" *ngIf="loading">
+        <div class="spinner-border" role="status">
+          <span class="sr-only"></span>
+        </div>
+      </div>
+      <div *ngIf="!loading && postsShown.length === 0" class="text-center mt-3">
+        <h4>No posts</h4>
+      </div>
+      <div class="text-center mt-3" *ngIf="currentPage + 1 < totalPages">
+        <button
+          class="btn btn-primary px-5"
+          id="loadMoreButton"
+          (click)="getMorePosts()"
+        >
+          Load More
+        </button>
       </div>
     </div>
     <div class="col-md-4 mb-3">
