--- a/frontendFix/src/app/components/profile/profile.component.html
+++ b/frontendFix/src/app/components/profile/profile.component.html
@@ -2,42 +2,55 @@
   <h1>This user does no exist :(</h1>
 </div>
 <ng-template #noUserCont>
-<div class="container mt-5 flex-grow-1">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="text-center">
-      <img [src]="'/api/users/' + userId + '/image'" alt="User Image" class="rounded-circle mb-3"
-          style="width: 150px; height: 150px">
-        <h2>{{userName}}</h2>
-        <p *ngIf="numberPosts==1; else onePost">{{numberPosts}} Post</p>
-        <ng-template #onePost>
-          <p>{{numberPosts}} Posts</p>
-        </ng-template>
-        <p *ngIf="numberThreads==1; else OneThread" >{{numberThreads}} Thread</p>
-        <ng-template #OneThread>
-          <p>{{numberThreads}} Threads</p>
-        </ng-template>
-        <button *ngIf="isAdmin" type="button" class="btn btn-link text-decoration-none btn-delete" data-toggle="modal">
-          <i class="fas fa-trash btn-delete"></i> Delete Account
-        </button>
+  <div class="container mt-5 flex-grow-1">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="text-center">
+          <img
+            [src]="'/api/users/' + userId + '/image'"
+            alt="User Image"
+            class="rounded-circle mb-3"
+            style="width: 150px; height: 150px"
+          />
+          <h2>{{ userName }}</h2>
+          <p *ngIf="numberPosts == 1; else onePost">{{ numberPosts }} Post</p>
+          <ng-template #onePost>
+            <p>{{ numberPosts }} Posts</p>
+          </ng-template>
+          <p *ngIf="numberThreads == 1; else OneThread">
+            {{ numberThreads }} Thread
+          </p>
+          <ng-template #OneThread>
+            <p>{{ numberThreads }} Threads</p>
+          </ng-template>
+          <button
+            *ngIf="isAdmin"
+            type="button"
+            class="btn btn-link text-decoration-none btn-delete"
+            data-toggle="modal"
+          >
+            <i class="fas fa-trash btn-delete"></i> Delete Account
+          </button>
+        </div>
       </div>
-    </div>
-    <div *ngIf="threads.length === 0; else otherCont">
-      <h1>No threads yet by this user :(</h1>
-    </div>
-    <ng-template #otherCont >
-      <div>
-      <h2>Threads</h2>
-    <div class="list-group" id="thread-container">
-      <div *ngFor="let thread of threads">
-        <a [routerLink]="['/t', thread.id]" class="list-group-item list-group-item-action d-flex align-items-center">
-          <i>{{thread.name}}</i>
-        </a>
+      <div *ngIf="threads.length === 0; else otherCont">
+        <h1>No threads yet by this user :(</h1>
       </div>
-    </div>
-      </div>
-
-    </ng-template>
+      <ng-template #otherCont>
+        <div class="col-md-8">
+          <h2>Threads</h2>
+          <div class="list-group mb-3" id="thread-container">
+            <div *ngFor="let thread of threads">
+              <a
+                [routerLink]="['/t', thread.id]"
+                class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+              >
+                <i>{{ thread.name }}</i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </ng-template>
     </div>
   </div>
 </ng-template>
