--- a/frontendFix/src/app/components/categories/categories.component.html
+++ b/frontendFix/src/app/components/categories/categories.component.html
@@ -2,7 +2,7 @@
 <div class="list-group mb-3" id="thread-container">
   <div *ngFor="let forum of forums">
     <a
-      [routerLink]="['/f', forum.name]"
+      [routerLink]="['/f', forum.id]"
       class="row list-group-item list-group-item-action d-flex align-items-center"
     >
       <i class="col-1 d-flex justify-content-center align-items-center fas fa-{{ forum.icon }}"></i>
