--- a/frontendFix/src/app/components/forum/forum.component.html
+++ b/frontendFix/src/app/components/forum/forum.component.html
@@ -1,53 +1,90 @@
-
 <div class="container mt-4 flex-gr">
   <div class="row">
     <div class="col-md-8 mb-3">
-      <div class="col-12 d-flex justify-content-between align-items-center mb-3">
-        <h2 class="uppercase"><i class="fas fa-{{forumIcon}} fa-lg mb-1"></i> {{forumName}}</h2>
-        <button *ngIf="loggedIn" type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#uploadModal">
+      <div
+        class="col-12 d-flex justify-content-between align-items-center mb-3"
+      >
+        <h2 class="uppercase">
+          <i class="fas fa-{{ forum?.icon }} fa-lg mb-1"></i> {{ forum?.name }}
+        </h2>
+        <button
+          *ngIf="loggedIn"
+          type="button"
+          class="btn btn-outline-primary"
+          data-toggle="modal"
+          data-target="#uploadModal"
+        >
           New thread
         </button>
       </div>
       <div class="list-group" id="thread-container">
         <div *ngFor="let thread of threads">
-          <a [routerLink]="['/t', thread.id]" class="list-group-item list-group-item-action d-flex align-items-center">
-            <i>{{thread.name}}</i>
+          <a
+            [routerLink]="['/t', thread.id]"
+            class="list-group-item list-group-item-action d-flex align-items-center"
+          >
+            <i>{{ thread.name }}</i>
           </a>
         </div>
+      </div>
+      <div *ngIf="threads.length === 0">
+        <h1>No threads yet in this forum :(</h1>
+      </div>
+    </div>
 
-</div>
-<div *ngIf="threads.length === 0">
-  <h1>No threads yet in this forum :(</h1>
-</div>
-</div>
-
-<div class="col-md-4 mb-3">
-  <app-categories></app-categories>
-</div>
-</div>
+    <div class="col-md-4 mb-3">
+      <app-categories></app-categories>
+    </div>
+  </div>
 </div>
 
-<div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel"
-  aria-hidden="true">
+<div
+  class="modal fade"
+  id="uploadModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="uploadModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="uploadModalLabel">Upload Thread</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
 
-      <form id="uploadForm" [formGroup]="uploadForm" (ngSubmit)="uploadThread()" enctype="multipart/form-data">
+      <form
+        id="uploadForm"
+        [formGroup]="uploadForm"
+        (ngSubmit)="uploadThread()"
+        enctype="multipart/form-data"
+      >
         <div class="modal-body">
           <div class="form-group">
             <label for="inputText">Text</label>
-            <textarea class="form-control" id="inputTextArea" formControlName="text" rows="3"
-              placeholder="Enter the thread tittle" required></textarea>
+            <textarea
+              class="form-control"
+              id="inputTextArea"
+              formControlName="text"
+              rows="3"
+              placeholder="Enter the thread tittle"
+              required
+            ></textarea>
           </div>
-          </div>
+        </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-link text-decoration-none" data-dismiss="modal">
+          <button
+            type="button"
+            class="btn btn-link text-decoration-none"
+            data-dismiss="modal"
+          >
             Close
           </button>
           <button type="submit" class="btn btn-primary">Upload</button>
@@ -56,6 +93,3 @@
     </div>
   </div>
 </div>
-
-
-
