--- a/frontendFix/src/app/components/thread/thread.component.html
+++ b/frontendFix/src/app/components/thread/thread.component.html
@@ -5,7 +5,7 @@
         class="col-12 d-flex justify-content-between align-items-center mb-3"
       >
         <h2 class="mb-0 col-8">
-          <a href="/f/{{ thread?.forum?.name }}"
+          <a href="/f/{{ thread?.forum?.id }}"
             ><i class="fas fa-{{ thread?.forum?.icon }} fa-lg"></i
           ></a>
           {{ thread?.name }}
