--- a/frontendFix/src/app/components/sign-up/sign-up.component.html
+++ b/frontendFix/src/app/components/sign-up/sign-up.component.html
@@ -51,7 +51,7 @@
           <hr class="mt-4" />
           <div class="col-12 text-center">
             <p class="mb-0">
-              Already have an account? <a href="login">Log in</a>
+              Already have an account? <a routerLink="/login">Log in</a>
             </p>
           </div>
         </div>
