--- a/frontendFix/src/app/components/login/login.component.html
+++ b/frontendFix/src/app/components/login/login.component.html
@@ -36,7 +36,7 @@
         <hr class="mt-4" />
         <div class="text-center">
           <p class="mb-0">
-            Don't have an account? <a href="/register">Sign Up</a>
+            Don't have an account? <a routerLink="/register">Sign Up</a>
           </p>
         </div>
       </div>
