delete all href

--- a/frontendFix/src/app/components/sign-up/sign-up.component.html
+++ b/frontendFix/src/app/components/sign-up/sign-up.component.html
@@ -68,7 +68,7 @@
         Please choose a different one.
       </h3>
       <br />
-      <a href="/register">Try to sign up again</a>
+      <a routerLink="/register">Try to sign up again</a>
     </div>
   </div>
 </div>
@@ -80,7 +80,7 @@
       Registration Successful! You are now a member of Inforum. Welcome aboard!
     </h3>
     <br />
-    <a href="login">Try to log In</a>
+    <a routerLink="login">Try to log In</a>
   </div>
   </div>
 </div>
