add delete user

--- a/frontendFix/src/app/components/profile/profile.component.html
+++ b/frontendFix/src/app/components/profile/profile.component.html
@@ -28,6 +28,7 @@
             type="button"
             class="btn btn-link text-decoration-none btn-delete"
             data-toggle="modal"
+            (click)="deleteUser(userId)"
           >
             <i class="fas fa-trash btn-delete"></i> Delete Account
           </button>
